Replaced explicit JavaFX dependencies with JavaFX Gradle plugin